Skip to content

[3.0] Bad ratio with AV1 videos on Android

Description

This video looks good on desktop, seems specific to Android.

Download :

https://drive.google.com/file/d/1tsYgUBKppQ6ifiYX3WVCQIFhtaSxHd7y/view?usp=sharing

Mediainfo :



General
Unique ID                                : 110506037204455897747037858775626816878 (0x5322B048A9F57ED5252C9946DF4A1D6E)
Complete name                            : Source_Ratio_-_Bleach_1080p_BD_AV1.mkv
Format                                   : Matroska
Format version                           : Version 4
File size                                : 280 MiB
Duration                                 : 23 min 51 s
Overall bit rate                         : 1 639 kb/s
Frame rate                               : 23.976 FPS
Encoded date                             : 2023-06-04 17:10:33 UTC
Writing application                      : mkvmerge v76.0 ('Celebration') 64-bit
Writing library                          : libebml v1.4.4 + libmatroska v1.7.1
Attachments                              : AvantGarde-Bold.otf / blogger-sans.bold.otf / blogger-sans.regular.otf / cambria.ttf / cambriab.ttf / CfXerographyDemoRegular-ra8y.ttf / Dry_Brush.ttf / Gandhi Sans Bold Italic.otf / Gandhi Sans Bold.otf / grain.ttf / KirimomiSwaIt.otf / One Slice.otf / steelfish eb.ttf / TR-FOT-MATISSEPRO-B.ttf / TSUKUMINPRO-B-Str.otf / WorldwideBoldCondensed.ttf

Video
ID                                       : 1
Format                                   : AV1
Format/Info                              : AOMedia Video 1
Format profile                           : Main@L4.0
Codec ID                                 : V_AV1
Duration                                 : 23 min 51 s
Bit rate                                 : 1 330 kb/s
Width                                    : 1 920 pixels
Height                                   : 1 080 pixels
Display aspect ratio                     : 16:9
Frame rate mode                          : Constant
Frame rate                               : 23.976 (24000/1001) FPS
Color space                              : YUV
Chroma subsampling                       : 4:2:0
Bit depth                                : 10 bits
Bits/(Pixel*Frame)                       : 0.027
Stream size                              : 227 MiB (81%)
Default                                  : No
Forced                                   : No
Color range                              : Limited

Audio #1
ID                                       : 2
Format                                   : Opus
Codec ID                                 : A_OPUS
Duration                                 : 23 min 51 s
Bit rate                                 : 111 kb/s
Channel(s)                               : 2 channels
Channel layout                           : L R
Sampling rate                            : 48.0 kHz
Frame rate                               : 50.000 FPS (960 SPF)
Compression mode                         : Lossy
Stream size                              : 19.0 MiB (7%)
Writing library                          : Lavc59.25.100 libopus
Language                                 : English
Default                                  : No
Forced                                   : No

Audio #2
ID                                       : 3
Format                                   : Opus
Codec ID                                 : A_OPUS
Duration                                 : 23 min 51 s
Bit rate                                 : 112 kb/s
Channel(s)                               : 2 channels
Channel layout                           : L R
Sampling rate                            : 48.0 kHz
Frame rate                               : 50.001 FPS (960 SPF)
Compression mode                         : Lossy
Stream size                              : 19.1 MiB (7%)
Writing library                          : Lavc59.25.100 libopus
Language                                 : Japanese
Default                                  : Yes
Forced                                   : No

Text #1
ID                                       : 4
Format                                   : ASS
Codec ID                                 : S_TEXT/ASS
Codec ID/Info                            : Advanced Sub Station Alpha
Duration                                 : 23 min 46 s
Bit rate                                 : 32.5 kb/s
Frame rate                               : 1.402 FPS
Count of elements                        : 2000
Compression mode                         : Lossless
Stream size                              : 5.53 MiB (2%)
Title                                    : Full Subtitles [Lazy]
Language                                 : English
Default                                  : Yes
Forced                                   : No

Text #2
ID                                       : 5
Format                                   : ASS
Codec ID                                 : S_TEXT/ASS
Codec ID/Info                            : Advanced Sub Station Alpha
Duration                                 : 23 min 46 s
Bit rate                                 : 32.4 kb/s
Frame rate                               : 1.179 FPS
Count of elements                        : 1683
Compression mode                         : Lossless
Stream size                              : 5.51 MiB (2%)
Title                                    : Signs & Songs
Language                                 : English
Default                                  : No
Forced                                   : No

Menu
00:00:00.000                             : en:Prologue
00:01:19.999                             : en:Part A
00:08:36.975                             : en:Eyecatch
00:08:39.978                             : en:Part B
00:19:53.901                             : en:ED
00:23:34.914                             : en:Poem
00:23:50.950                             : en:End

Screenshot / video

Screenshot_20241114_163033

Screenshot_20241114_162940

Context

App version

3.6.0 Beta 3

Android version

13

Device model

Xperia 10 III

App mode

Smartphone

Edited by Alexandre Perraud
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information